--- a/public/views/checkout.ejs
+++ b/public/views/checkout.ejs
@@ -1,16 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<%- include('header'); -%>
+
+<title>Checkout</title>
 <body>
+    <%- include('menu'); -%> 
+    
     <% if(message) { %>
         <h1><%= message %></h1>
     <% } else { %>
         <h1>Nothing</h1>
     <% } %>
 </body>
-</html>
+
+<%- include('footer'); -%>
